[workspace]
resolver = "2"
members = ["service", "plugin"]

[workspace.package]
version = "0.14.0"
rust-version = "1.64"
edition = "2021"
publish = false

[package]
name = "{{project-name}}-pkg"   # Crate name
description = "{{description}}"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.psibase]
# PsiPackage name: referenced from tests
# TODO: distinguish psi-package-name and package-name so the difference is demonstrated
package-name = "{{project-name | upper_camel_case}}"
services = ["{{project-name}}"]

[package.metadata.psibase.dependencies]
HttpServer = "0.14.0"

[lib]
crate-type = ["rlib"]

[dependencies]
{{project-name}} = { path = "service" }
plugin = { path = "plugin" }
