[package]
name = "account_sys"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
fracpack = { version = "0.1.0", path = "../fracpack" }
libpsibase = { version = "0.1.0", path = "../libpsibase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
