[package]
name = "account_sys"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
fracpack = { version = "0.1.0", path = "../fracpack" }
psibase = { version = "0.2.0", path = "../psibase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
