[package]
name = "account_sys"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
fracpack = { path = "../fracpack" }
psibase = { path = "../psibase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
