[package]
name = "burst-transfer"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2021"
publish = false
description = "Randomly transfer tokens"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "4.5", features = ["derive"]}
futures = "0.3"
psibase = { version = "0.14.0", path = "../psibase" }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2"
