[package]
name = "burst-transfer"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
publish.workspace = true
description = "Randomly transfer tokens"
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono = "0.4"
clap.workspace = true
futures = "0.3"
psibase.workspace = true
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
url.workspace = true
psibase-rust-workspace-hack.workspace = true
