[package]
name = "cargo-psibase"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2021"
description = "Build tool for psibase blockchains"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
wasm-opt = "0.116.0"
cargo_metadata = "0.18.1"
clap = { version = "4.4", features = ["derive"]}
console = "0.15.2"
psibase = { version = "0.17.0", path = "../psibase" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { version = "1", features = ["full"] }
url = { workspace = true }
walrus = "0.20.3"
wasmparser = { version = "0.201.0"}
tempfile = { version = "3.10" }
zip = { version = "0.6", default-features = false, features = ["deflate"]}

[dev-dependencies]
wasmprinter = { version = "0.201.0"}
wat = { version = "1.201.0" }

[build-dependencies]
wasm-opt = "0.116.0"
