[package]
name = "cargo-psibase"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
description = "Build tool for psibase blockchains"
license.workspace = true

[dependencies]
anyhow.workspace = true
wasm-opt = "0.116.0"
cargo_metadata = "0.18.1"
clap.workspace = true
console = "0.15.2"
psibase.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url.workspace = true
walrus = "0.20.3"
wasmparser = { version = "0.201.0" }
tempfile = { version = "3.10" }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
psibase-rust-workspace-hack.workspace = true

[dev-dependencies]
wasmprinter = { version = "0.201.0" }
wat = { version = "1.201.0" }

[build-dependencies]
wasm-opt = "0.116.0"
