[package]
name = "fracpack"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2021"
description = "Convert to and from the fracpack format"
license = "MIT"

[lib]
path = "src/fracpack.rs"

[dependencies]
custom_error = "1.9.2"
hex = "0.3.1"
indexmap = { version = "2.2.6", features = ["std", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"]}
serde-aux = "4.4"
psibase_macros = { version = "0.17.0", path = "../psibase_macros" }
