[package]
name = "fracpack"
version.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
description = "Convert to and from the fracpack format"
license.workspace = true

[lib]
path = "src/fracpack.rs"

[dependencies]
custom_error = "1.9.2"
hex = "0.3.1"
indexmap.workspace = true
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
serde-aux.workspace = true
psibase_macros.workspace = true
psibase-rust-workspace-hack.workspace = true
